# kprovengine

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  AGENTS.md  AI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OSS_GOVERNANCE.md  README.md  SECURITY.md  codecov.yml  demo.sh  demo_input.txt  docker-compose.yml  mvp.py  pyproject.toml  ruleset.json  tox.ini
.agents/: PROMPTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.md
.github/ISSUE_TEMPLATE/: CODE_OF_CONDUCT.md  bug_report.md  festure_request.md
.github/workflows/: ci.yml  docker-ci.yml  e2e.yml  release.yml  security.yml
apps/cli/: README.md
docs/: BACKLOG.md  FINDINGS_CODEX.md  SPEC.md  WORKFLOW.md  architecture.md  requirements.md  security.md
docs/diagrams/: architecture.mmd
docs/governance/: DEV_CARD_V1.md  IDENTITY_DISPLAY_NAME.txt  IDENTITY_FORBIDDEN_TOKENS.txt  PROJECT_SNAPSHOT_V1_2026-02-08.md  PROMPT_V1_LOCKED.md  REVIEW_GATE_V1.md  STACK_V1_LOCKED.md  TOOLCHAIN_SCHEMA_V1.md  v1_SCHEMA_TRACEABILITY.md
scripts/: attest.sh  bootstrap.sh  check_dco.py  check_env.sh  check_makefile_safety.sh  check_project_identity.py  check_tracked_artifacts.sh  check_venv_python.py  demo_e2e_all.sh  doctor.sh  env_check.sh  forbid_tracked_artifacts.sh  generate_changeset_manifest.py  generate_evidence_report.py  guard_governance_locked.sh  preflight.sh  render_mermaid.sh  sbom.sh  sign.sh  snapshot.sh  validate_codex_surface.py  verify_changeset_manifest.py
src/kprovengine/: __init__.py  __main__.py  cli.py  config.py  errors.py  types.py
tests/: test_artifact_contract.py  test_changeset_manifest.py  test_dco.py  test_smoke.py
tests/fixtures/: expected_hashes.json  sample_text.txt  search_golden.json
(+58 files in other folders)
